--- a/src/app/dashboard/user/profile-settings/profile-settings.component.html
+++ b/src/app/dashboard/user/profile-settings/profile-settings.component.html
@@ -1,4 +1,4 @@
-<div class="rounded-md mx-auto">
+<div class="rounded-md mx-auto bg-gray-100">
     <form [formGroup]="updateUserForm">
         <header class="text-center m-2 font-bold font-sans mb-2">
             <h1 class=" text-xl">Personal Information</h1>
