--- a/src/app/navbar/side-bar/side-bar.component.html
+++ b/src/app/navbar/side-bar/side-bar.component.html
@@ -60,7 +60,7 @@
                 <!-- Dashboard Link -->
                 <div class="flex items-left p-2 m-4 text-white cursor-pointer duration-300 hover:bg-gray-700 
                     hover:rounded-md hover:p-2"
-                    [ngClass]="{'bg-gray-800 rounded-md px-2 bg-w-full': isActive('dashboard') && isPath('dashboard')}">
+                    [ngClass]="{'bg-gray-800 rounded-md px-2 bg-w-full': isActive('dashboard') && !isNotActive()}">
                     <feather-icon name="package" class="text-xl text-white" style="width: 30px;"></feather-icon>
                     <h1 class="mx-4">
                         <a routerLink="/dashboard" class="text-md">
