--- a/src/app/centers/center-hero-detail/center-hero-detail.component.html
+++ b/src/app/centers/center-hero-detail/center-hero-detail.component.html
@@ -1,6 +1,6 @@
 <section class="rounded-md font-bold bg-gray-100">
     <div class="w-full items-center justify-items-center gap-5 cursor-pointer"
-        *ngFor="let a of album?.videos; let i = index" [class.hidden]=" i !== albumIndex">
+        *ngFor="let a of album?.video; let i = index" [class.hidden]=" i !== albumIndex">
         <div
             class="flex flex-col justify-center items-center transition-auto duration-3000 ease-in-out">
             <video class="md:object-cover w-full object-contain md:h-[600px] rounded-md hover:drop-shadow-2xl transition-all 
