--- a/src/app/centers/center-introduction/center-introduction.component.html
+++ b/src/app/centers/center-introduction/center-introduction.component.html
@@ -9,11 +9,11 @@
         <div class="order-1 flex justify-center items-center mt-2 md:mt-0">
             <img class="w-[400px] h-[400px] object-cover m-2 md:w-[500px] md:h-[450px] rounded-md mb-4 md:mb-0
             transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl"
-                src="{{ centerIntroduction?.imageUrl }}">
+                src="{{ centerIntroduction?.coverPhoto }}">
         </div>
         <div class="order-1 grid grid-cols-1 text-justify items-center bg-gray-100 m-8 rounded-md mx-auto">
-            <p class="text-sm w-100 font-sans mx-5 mb-5 md:mb-0" *ngFor="let p of centerIntroduction?.paragraphs">
-               {{ p.paragraph }}
+            <p class="text-sm w-100 font-sans mx-5 mb-5 md:mb-0">
+               {{ centerIntroduction?.introduction }}
             </p>        
             <button class="text-sm font-sans bg-red-600 text-white py-2 mb-5 px-5 hover:bg-red-700 rounded-md mx-auto
                 transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl">
